[gd_scene load_steps=3 format=2]

[ext_resource path="res://ui/menu_button.tscn" type="PackedScene" id=1]
[ext_resource path="res://ui/pause_menu.gd" type="Script" id=2]

[node name="PauseMenu" type="ColorRect"]
pause_mode = 2
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0, 0, 0, 0.462745 )
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MarginContainer" type="MarginContainer" parent="."]
anchor_top = 0.5
anchor_bottom = 0.5
margin_top = -288.0
margin_right = 1024.0
margin_bottom = 288.0
custom_constants/margin_left = 50
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
margin_left = 50.0
margin_right = 1024.0
margin_bottom = 576.0
alignment = 1

[node name="ContinueButton" parent="MarginContainer/VBoxContainer" instance=ExtResource( 1 )]
text = "Continue"

[node name="SettingsButton" parent="MarginContainer/VBoxContainer" instance=ExtResource( 1 )]
margin_top = 271.0
margin_bottom = 304.0
text = "Settings"

[node name="ReturnToMainMenuButton" parent="MarginContainer/VBoxContainer" instance=ExtResource( 1 )]
margin_top = 308.0
margin_bottom = 341.0
text = "Return to main menu"
[connection signal="pressed" from="MarginContainer/VBoxContainer/ContinueButton" to="." method="_on_ContinueButton_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/SettingsButton" to="." method="_on_SettingsButton_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/ReturnToMainMenuButton" to="." method="_on_ReturnToMainMenuButton_pressed"]
